--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -21,6 +21,18 @@
         app:layout_constraintGuide_end="24dp" />
 
     <ImageButton
+        android:id="@+id/imgbtnGoback"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="40dp"
+        app:tint="#000000"
+        android:background="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/arrow_back" />
+
+    <ImageButton
         android:id="@+id/imageBtnHome"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -108,7 +120,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/recyclerUser"
-        app:srcCompat="@drawable/menu_bar" />
+        app:srcCompat="@drawable/services" />
 
     <TextView
         android:id="@+id/textView10"
