--- a/app/src/main/res/layout/activity_package.xml
+++ b/app/src/main/res/layout/activity_package.xml
@@ -1,94 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff">
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="36dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="35dp" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="#000000"
-        android:gravity="center_vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:background="#000000">
 
         <ImageButton
             android:id="@+id/imgbtnGoback"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="26dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="50dp"
             android:background="@android:color/transparent"
-            android:scaleType="fitXY"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/arrow_back" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            app:srcCompat="@drawable/getgp_premium" />
-    </LinearLayout>
+            app:srcCompat="@drawable/getgp_premium"
+            app:layout_constraintBottom_toBottomOf="@+id/imgbtnGoback"
+            app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
+            app:layout_constraintTop_toTopOf="@+id/imgbtnGoback"/>
 
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="97dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/kufam"
-        android:text="Benefits"
-        android:textColor="#93BC66"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/shape_rectangle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgbtnGoback">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerBenefit"
-        android:layout_width="match_parent"
-        android:layout_height="290dp"
-        android:layout_marginHorizontal="35dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="36dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerPackage"
-        android:layout_width="match_parent"
-        android:layout_height="260dp"
-        android:layout_marginHorizontal="45dp"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerBenefit"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerBenefit" />
-    <Button
-        android:id="@+id/btnNext"
-        android:layout_width="140dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#93BC66"
-        android:fontFamily="@font/kufam"
-        android:text="Next"
-        android:textColor="#fff"
-        android:textSize="20dp"
-        android:textStyle="bold|italic"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerPackage"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerPackage" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="36dp" />
 
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="97dp"
+                android:layout_height="42dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/kufam_bold"
+                android:text="Benefits"
+                android:textColor="#93BC66"
+                android:textSize="24dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerBenefit"
+                android:layout_width="match_parent"
+                android:layout_height="290dp"
+                android:layout_marginHorizontal="35dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@+id/textView20"
+                app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerPackage"
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:layout_marginHorizontal="45dp"
+                app:layout_constraintEnd_toEndOf="@+id/recyclerBenefit"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerBenefit" />
+
+            <Button
+                android:id="@+id/btnNext"
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="40dp"
+                android:backgroundTint="#93BC66"
+                android:fontFamily="@font/kufam_bold_italic"
+                android:text="Next"
+                android:textColor="#fff"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerPackage"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
