--- a/app/src/main/res/layout/layout_locations.xml
+++ b/app/src/main/res/layout/layout_locations.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/semiround_button"
-    android:backgroundTint="#D9D9D9"
-    android:padding="5dp">
+    android:backgroundTint="#80D9D9D9"
+    android:padding="3dp">
 
     <ImageView
         android:id="@+id/imgLocation"
         android:layout_width="0dp"
-        android:layout_height="@android:dimen/thumbnail_height"
+        android:layout_height="@android:dimen/thumbnail_width"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,9 +19,10 @@
 
     <TextView
         android:id="@+id/tvNameLocation"
-        android:layout_width="77dp"
+        android:layout_width="wrap_content"
         android:layout_height="23dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/semiround_button"
         android:backgroundTint="#77FFFFFF"
         android:fontFamily="@font/kufam"
@@ -31,8 +32,6 @@
         android:textAllCaps="true"
         android:textColor="#000000"
         android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="@+id/imgLocation"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imgLocation" />
 
@@ -40,11 +39,12 @@
         android:id="@+id/btnTym"
         android:layout_width="35dp"
         android:layout_height="35dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/semiround_button"
         android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/tvNameLocation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvNameLocation"
         app:layout_constraintTop_toTopOf="@+id/tvNameLocation"
         app:srcCompat="@drawable/favorite" />
 
