--- a/app/src/main/res/layout/layout_message.xml
+++ b/app/src/main/res/layout/layout_message.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/listMessage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="670dp"
         android:scrollbars="none"
         android:divider="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
